Added .oct for audio out- and input:
 - way faster than TestTone because it skips saving lots of ASCII data to files
   and reading it
 - output and input without glitches on my system (Debian 9, pulseaudio. Some
   applications produce glitches. Audacity and this .oct-implementation
   are fine, however).


Indentation treatment of mataa_measure_signal_response.m

--- a/documentation/source/MATAA_manual.texi
+++ b/documentation/source/MATAA_manual.texi
@@ -13,7 +13,7 @@
 @copying
 
 @cindex Copyright
-Copyright @copyright{} 2006, 2007 Matthias Brennwald (@email{@value{CONTACT-EMAIL}})
+Copyright @copyright{} 2006, 2007 Matthias Brennwald (@email{@value{CONTACT-EMAIL}}) and contributors
 
 @cindex Terms and Conditions
 MATAA is free software; you can redistribute it and/or modify
